tests/NormalTests/paczka1/fuzzy1/48799888.err
Error in line 2: 9hhrYjXzK S159 69,1
Error in line 1: PN73mgLorq S573 28,5
Error in line 13: PN73mgLorq A744 84,8
Error in line 36: S159 S573 0,7
